--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link href="./resources/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <title>HTML & CSS Cheatsheets</title>
 </head>
 
