--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <tr>
             <td><span class="tag">font-family</span></td>
             <td>Font style, just like a word processor.</td>
-            <td>There are many different styles to choose from on the line. Enter at your own risk.</td>
+            <td>There are many different styles to choose from on-the-line. Enter at your own risk.</td>
           </tr>
           <tr>
             <td><span class="tag">border</span></td>
